--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@
 
 ### User defined ###
 frontend/logs/
+frontend/docs/
+
+frontend/js/imgui-js/
+
+frontend/html/3DView_OLD.html
+frontend/js/3DView/3DView_OLD.js
+frontend/js/system.config.js
 
 ### Linux ###
 *~
