--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,9 @@ services:
       - REPOSITORY_PATH=/data/repos
       - PORT=${api_port}
       - JAVA_PARSER=/go/src/github.com/zohaib194/CodebaseVisualizer3D/backend/parser/build/classes/java/main
+      - CLASSPATH=.:/usr/local/lib/antlr-4.7.2-complete.jar:$CLASSPATH
+      - antlr4=java -jar /usr/local/lib/antlr-4.7.2-complete.jar
+      - grun=java org.antlr.v4.gui.TestRig
 
   doc:
     build:
