--- a/backend/parser/build.gradle
+++ b/backend/parser/build.gradle
@@ -32,6 +32,8 @@ repositories {
 
 
 dependencies {
+    // https://mvnrepository.com/artifact/org.json/json
+    compile group: 'org.json', name: 'json', version: '20180813'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
