Updated readme, fixed lagging in visualization by reducing updateMatricWorld function call, removed unnessecasry error log from repo.go and updated gitignore to ignore css folder.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ backend/parser/src/test/java/variable.cpp
 *.css.map
 *.sass.map
 *.scss.map
+css/
 
 ### SublimeText ###
 # Cache files for Sublime Text
